Document PPDG/src/objects/Security_Incident_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Action_Status__c</fullName>
        <label>Action Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_taken__c</fullName>
        <label>Action taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Category__c</fullName>
        <label>Incident Category</label>
        <picklist>
            <picklistValues>
                <fullName>Email Spoof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bit locker Encryption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AV Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaver not disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Phishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorised Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firewall Denies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malicious Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Leakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Scan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reported_by__c</fullName>
        <label>Reported by</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Summary__c</fullName>
        <label>Resolution Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOC_Offence_Id__c</fullName>
        <label>SOC Offence Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_of_the_Issue__c</fullName>
        <label>Summary of the Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>System Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Incident_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_affected__c</fullName>
        <label>System / User affected</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Security Incident Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIT-{000000}</displayFormat>
        <label>Security Incident Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Incident Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>